--- a/gearset/templates/result.html
+++ b/gearset/templates/result.html
@@ -6,7 +6,40 @@
     <meta charset="UTF-8">
     <title>Gear Finder Result</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/table.css' %}">
+    <style>
+        body {
+          text-align: center;
+          font-family: sans-serif;
+        }
+        table {
+          font-family: monospace;
+          margin: 0 auto;
+          border: 1px solid #000000;
+          text-align: left;
+          border-collapse: collapse;
+        }
+        table td, table th {
+          border: 1px solid #000000;
+          padding: 5px;
+        }
+        table tr:nth-child(even) {
+          background: #f7f7f7;
+        }
+        table thead {
+          background: #C4C4C4;
+          background: -moz-linear-gradient(top, #d3d3d3 0%, #cacaca 66%, #C4C4C4 100%);
+          background: -webkit-linear-gradient(top, #d3d3d3 0%, #cacaca 66%, #C4C4C4 100%);
+          background: linear-gradient(to bottom, #d3d3d3 0%, #cacaca 66%, #C4C4C4 100%);
+        }
+        table thead th {
+          font-weight: bold;
+          color: #000000;
+          text-align: center  ;
+        }
+        table tfoot td {
+          font-size: 14px;
+        }
+    </style>
 </head>
 <body>
 <h1>Input</h1>
